syntax = "proto3";

package good.gateway.good1.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/good/gateway/v1/good";

import "good/middleware/v1/good/good.proto";
import "google/api/annotations.proto";

// Service Name
service Gateway {
    rpc GetGoods(GetGoodsRequest) returns (GetGoodsResponse) {
        option (google.api.http) = {
            post: "/v1/get/goods"
            body: "*"
        };
    }
}

message GetGoodsRequest {
    int32 Offset = 10;
    int32 Limit = 20;
}

message GetGoodsResponse {
    repeated middleware.good1.v1.Good Infos = 10;
    uint32 Total = 20;
}

